Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog

CVS HEAD

* Added support for runtime max. voices / disk streams setting
  (accessible from the "Options..." dialog). Those fine tuning
  settings will be saved in case the user modified them and
  automatically restored to the sampler when reconnecting to
  a sampler the next time. 

* Grayed/disabled palette color group fix for dark color themes.

* Fait-divers: desktop menu file touched to openSUSE conventions.

* Due to some trouble with newer Qt >= 4.4 applications regarding
  font size configuration, a new global user option is now available
  to the rescue: View/Options... /Display/Other/Base font size
  (default none).

* Attempt to load Qt's own translation support and get rid of
  the ever warning startup message, unless built in debug mode.
  (transaction by Guido Scholz, while on qsynth-devel, thanks).

* Only one application instance is now allowed to be up and
  running, with immediate but graceful termination upon startup
  iif an already running instance is detected, which will see its
  main widget shown up automatically (Qt/X11 platform only).

* Messages file logging makes its first long overdue appearance,
  with user configurable settings in View/Options.../Server/Logging.

* Bugfix in sampler channel dialog, driver combo boxes' content were
  screwed.

* Automatically add & remove channel strips as they were removed
  e.g. by other frontends.

* Refresh device management dialog when device informations changed,
  e.g. on changes caused by other frontends
  (fixes segfault on device changes)

* Implemented MIDI device activity windows, selectable from the
  "View" main menu.

* Implemented MIDI activity indicator on channel strips.

* Added FX Sends Dialog to Channel Strips.

* Color pallete fix for the instrument name display in channel
  strip, particularly notorious on Mac OS X builds.
